--- a/real-spaces-child/style.css
+++ b/real-spaces-child/style.css
@@ -26,6 +26,7 @@
 
 ------------------------------------------------------- */
 /*General*/
+/*Updated notes here! Checking for success*/
 
 .avaant-hidden, #additionalinfo, .navailable, .middle-header, .badges, .images-count {
     display: none!important;
