--- a/real-spaces-child/style.css
+++ b/real-spaces-child/style.css
@@ -26,6 +26,11 @@
 
 ------------------------------------------------------- */
 /*General*/
+/*FA icons
+Hacker: fa-code
+hustler: fa-line-chart, fa-black-tie, fa-dollar
+creative: fa-pencil, fa-puzzle-piece, fa-lightbulb-o, fa-paint-brush
+*/
 
 body {
   overflow-x: hidden;
@@ -59,6 +64,24 @@ body {
   .middle-header {
     display: none;
   }
+}
+
+.site-header h1.avnt-logo {
+  position: absolute;
+  z-index: 1300;
+  display: block;
+  margin: 0;
+  height: 65px;
+  vertical-align: middle;
+  line-height: 0;
+}
+
+.site-header h1.avnt-logo img {
+  height: 50px;
+}
+
+.navigation > ul {
+  margin-left: 120px;
 }
 
 .navigation > ul > li > a {
@@ -97,6 +120,61 @@ body {
 
 /*Homepage*/
 
+/*Search module*/
+
+.site-search-module-inside {
+  padding: 0px 30px;
+  background: #f8f8f8;
+  border: 3px solid rgba(0,0,0,.8);
+  border-radius: 0;
+  background: #ddd;
+}
+
+.site-search-module .search-fields {
+  margin-left: 0;
+}
+
+.site-search-module .search-fields .search-field {
+  margin: 0 2%;
+  margin-top: 2px;
+}
+
+.site-search-module .search-fields > span {
+  font-size: 22px;
+  padding-top: 14px;
+  float: left;
+}
+
+.site-search-module .search-fields .search-field button {
+  height: 40px;
+  padding-top: 0;
+  padding-bottom: 0;
+}
+
+.site-search-module .search-fields .search-field button span.filter-option {
+  display: none;
+}
+
+.searchWord {
+  font-size: 22px;
+  color: #900;
+  float: left;
+}
+
+.site-search-module .search-buttons .search-button {
+  margin-top: 3px;
+  float: right;
+}
+
+.avntbuttonusc a {
+  text-decoration: none;
+  color: #fff;
+}
+
+.avntbuttonusc:hover a {
+  color: #900;
+}
+
 #avnt-homepage #content {
   padding-bottom: 0;
   padding-top: 0;
@@ -106,6 +184,18 @@ body {
   background-color: #F7FAFA;
   padding: 25px 0;
   border-bottom: 1px solid #D9D9DE;
+}
+
+.owl-carousel .item {
+  height: 414px;
+}
+
+li.property-block > a:first-child {
+  min-height: 200px;
+}
+
+.property-info, .agent-info {
+  border-bottom: 0;
 }
 
 #avnt-about {
@@ -118,7 +208,7 @@ body {
 #avnt-about h2 {
   margin: 0 auto 0 auto;
   color: #fff;
-  width: 226px;
+  width: 248px;
 }
 
 #avnt-about .row {
@@ -130,7 +220,7 @@ body {
 }
 
 #avnt-about .row h3 {
-  width: 26px;
+  width: 36px;
   margin: auto;
   font-size: 60px;
   color: #ffcc00;
@@ -138,7 +228,18 @@ body {
 
 #avnt-about .row p {
   color: #fff;
-  font-size: 15px;
+  font-size: 18px;
+  line-height: 24px;
+}
+
+/*Login/Signup*/
+
+.page-id-361 div.page > div.row > div.col-md-4:first-child {
+  padding-right: 50px;
+}
+
+.page-id-361 div.page > div.row > div.col-md-4:first-child > p:first-child {
+  margin-top: 40px;
 }
 
 /*Project Page*/
@@ -164,7 +265,7 @@ body {
 }
 
 .avnt-project h3 {
-  margin-bottom: 4px;
+  margin-bottom: 10px;
   line-height: 1em;
   font-size: 20px;
 }
@@ -182,13 +283,25 @@ body {
 }
 
 .avnt-seeking, .avnt-description {
-  margin-bottom: 40px;
+  margin-bottom: 15px;
 }
 
-span.available {
+.avnt-description {
+  background-color: #fff;
+  border-radius: 5px;
+  padding: 10px;
+  padding-bottom: 1px;
+}
+
+.avnt-home-seeking h5 {
+  margin-bottom: 0;
+}
+
+span.available, div.avnt-home-seeking p {
   font-size: 18px;
   line-height: 1.5;
-  background-color: #fff;
+  background-color: #990000;
+  color: #fff;
   display: inline-block;
   padding: 3px 9px;
   border-radius: 5px;
@@ -225,6 +338,50 @@ ul.share-buttons {
 
 .avnt-project .right-sidebar {
   margin-top: 24px;
+}
+
+/*About Page*/
+
+.page-id-459 .page-header div.col-md-12 {
+  background-color: transparent;
+}
+
+.page-id-459 div.col-md-12 {
+  background-color: #990000;
+  padding: 0;
+}
+
+.page-id-459 div.col-md-12 h4 {
+  padding: 0 100px;
+  color: #fff;
+}
+
+.page-id-459 div.col-md-12 h4:first-child {
+  padding-top: 15px;
+}
+
+.page-id-459 div.col-md-12 h3 {
+  margin: auto;
+  color: #fff;
+}
+
+.page-id-459 div.col-md-12 h3 a {
+  color: #fc0;
+}
+
+.page-id-459 div.col-md-12 h3 a:hover {
+  color: #fff;
+}
+
+.page-id-459 div.col-md-12 div.share-bar {
+  margin: 15px auto;
+  width: 252px;
+  background-color: #fff;
+  border-radius: 5px;
+}
+
+.page-id-459 div.col-md-12 div.share-bar .share-buttons > li {
+  margin: 5px;
 }
 
 /*Create page*/
