--- a/real-spaces-child/style.css
+++ b/real-spaces-child/style.css
@@ -45,6 +45,11 @@ body {
   border-bottom: 2px solid #3F5765;
 }
 
+div.site-showcase .page-header {
+  background-image: none;
+  background-color: #990000;
+}
+
 /*Header*/
 
 .main-menu-wrapper {
@@ -247,7 +252,7 @@ header .site-search-module-inside .search-button .btn {
 
 #featured-properties {
   background-color: #F7FAFA;
-  padding: 25px 0;
+  padding: 4% 0 5% 0;
   border-bottom: 1px solid #D9D9DE;
 }
 
@@ -266,8 +271,8 @@ li.property-block > a:first-child {
 #avnt-about {
   width: 100%;
   background-color: #900;
-  padding-top: 30px;
-  padding-bottom: 45px;
+  padding-top: 4%;
+  padding-bottom: 4.5%;
 }
 
 #avnt-about h2 {
