--- a/real-spaces-child/style.css
+++ b/real-spaces-child/style.css
@@ -41,8 +41,8 @@ body {
 }
 
 .avnt-box {
-  border-top: 2px solid #3F5765;
-  border-bottom: 2px solid #3F5765;
+/*  border-top: 2px solid #3F5765;*/
+/*  border-bottom: 2px solid #3F5765;*/
 }
 
 div.site-showcase, div.site-showcase .page-header {
@@ -125,7 +125,7 @@ div.site-showcase, div.site-showcase .page-header {
 
 /*Search module*/
 
-header div.col-md-6 {
+header div.col-md-5 {
   border-left: 1px solid #ddd;
 }
 
@@ -472,6 +472,7 @@ div.avnt-create {
 
 .avnt-create .avnt-box h1 {
   margin-bottom: 0px;
+  color: #fff;
 }
 
 .avnt-create form .row {
@@ -480,7 +481,7 @@ div.avnt-create {
   border-radius: 0px;
   margin-bottom: 15px;
   border: 1px solid #990000;
-  box-shadow: 10px 10px #000;
+  box-shadow: 7px 7px #000;
 }
 
 form .row:nth-child(4) {
@@ -507,4 +508,10 @@ ul.avnt-discover li {
   height: 450px;
   margin: 10px;
   padding: 0;
+}
+
+/*Events*/
+
+body.tribe-theme-child-real-spaces-child div.site-showcase div.container {
+  display: none;
 }
